--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -32,10 +32,6 @@ body {
   background-color: $cement;
   font-family: 'Roboto Mono', monospace;
 
-  @media screen and (min-width: $bk) {
-    margin-left: $bar-w * 0.5;
-  }
-
   &::before {
     @include pse($left: auto, $height: $bar-w);
     right: 0;
@@ -54,7 +50,8 @@ body {
 
 .h {
   margin-top: 0;
-  margin-bottom: 1.5 + $ul-h;
+  margin-bottom: $mb;
+  // padding-bottom: $ul-h / 2;
   color: $accent;
   position: relative;
   max-width: max-content;
@@ -65,6 +62,10 @@ body {
     @include pse($width: 50%, $height: $ul-h, $top: auto);
     bottom: -$ul-h;
     background-color: $prim;
+  }
+
+  &.--l {
+    font-size: 1.6em;
   }
 
   &.--m {
