--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -2,7 +2,7 @@ main {
   min-height: 100vh;
   max-width: 1200px;
   margin: auto;
-  padding: 1.5rem;
+  padding: 0 1.5rem;
 
   > * {
     display: flex;
@@ -14,6 +14,7 @@ main {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
+    padding-left: $bar-w;
 
     > * {
       margin-bottom: 0;
