--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,7 @@
 @import 'globals';
 @import 'headings';
 @import 'siteheader';
+@import 'sitefooter';
 @import 'main'; // main section
 @import 'iconbase';
 @import 'buttons';
