--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -7,6 +7,7 @@
 
   @media screen and (min-width: $bk) {
     margin: 0 0 $mb;
+    flex-grow: 2;
   }
 }
 
@@ -42,6 +43,6 @@
   background-color: $accent2-lt;
 
   @media screen and (min-width: $bk) {
-    margin: 0 0 0 auto;
+    margin: 0 10% 0 auto;
   }
 }
