--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,8 +1,12 @@
 main {
-  min-height: 100vh;
-  max-width: 1200px;
-  margin: auto;
   padding: 0 1.5rem;
+  min-height: 80vh;
+  display: flex;
+  flex: 1 1 0;
+  align-self: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: $cement;
 
   > * {
     display: flex;
@@ -10,11 +14,11 @@ main {
   }
 
   @media screen and (min-width: $bk) {
-    display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    justify-content: center;
-    padding-left: $bar-w;
+    justify-content: space-between;
+    width: 80%;
+    min-height: 100vh;
 
     > * {
       margin-bottom: 0;
