Adjust root padding

--- a/src/scss/_siteheader.scss
+++ b/src/scss/_siteheader.scss
@@ -8,7 +8,12 @@
   }
 
   .h {
-    margin: 0 0 0 auto;
+    // margin: 0;
+
+    text-align: center;
+    @media screen and (min-width: $bk) {
+      margin: 0 0 0 auto;
+    }
 
     &::before {
       width: 2em;
