--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -30,7 +30,7 @@ html {
   background-color: $accent2-lt;
 
   @media screen and (min-width: $bk) {
-    padding: 0 3rem;
+    padding: 0 3em;
   }
 }
 
