--- a/src/scss/_siteheader.scss
+++ b/src/scss/_siteheader.scss
@@ -8,11 +8,11 @@
   }
 
   .h {
-    // margin: 0;
-
     text-align: center;
+
     @media screen and (min-width: $bk) {
       margin: 0 0 0 auto;
+      text-align: right;
     }
 
     &::before {
